# dotedit

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
completions/bash/: dotedit-completion.bash
completions/fish/: dotedit.fish
completions/zsh/: _dotedit
dotedit/: __main__.py  _path_matcher.py
dotedit/completions/bash/: dotedit-completion.bash
