[tool.poetry]
name = "dotedit"
version = "0.4.0"
description = "Edit dotfiles easily"
authors = [
    "Daniel Alm Grundström <daniel.alm.grundstrom@protonmail.com>"
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/almgru/dotedit"
keywords = [
    "dotfiles",
    "rice",
    "dotedit"
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities"
]
include = ["dotedit/completions/**/*"]

[tool.poetry.dependencies]
python = "3"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
dotedit = 'dotedit.__main__:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
